Adjusting new function signature as per Import,java Cleaning up warnings